makefiles/mvm/test-network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-egress
  namespace: wego-system
spec:
  podSelector: {}
  egress:
  - {}
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress
  namespace: wego-system
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress
